# ChangeLog for games-action/rune
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/rune/ChangeLog,v 1.20 2012/01/16 19:10:25 ulm Exp $

  16 Jan 2012; Ulrich Müller <ulm@gentoo.org> rune-1.07-r2.ebuild:
  Migrate to cdrom.eclass, bug 398809.

  01 Sep 2010; Michael Sterrett <mr_bones_@gentoo.org> rune-1.07-r2.ebuild:
  EAPI=2; clean up SRC_URI

  26 Sep 2008; Zac Medico <zmedico@gentoo.org> rune-1.07-r2.ebuild:
  Set PROPERTIES=interactive since src_unpack() calls cdrom_get_cds() and
  also GAMES_CHECK_LICENSE=yes is set.

  05 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
  Removing myself as maintainer.

  06 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> rune-1.07-r2.ebuild:
  Fixing quoting.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> rune-1.07-r2.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  15 Jan 2008; Samuli Suominen <drac@gentoo.org> rune-1.07-r2.ebuild:
  change dev-util/xdelta dep. to =dev-util/xdelta-1*

  24 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> rune-1.07-r2.ebuild:
  Moved cdrom_get_cds to src_unpack since binary packages don't require the
  original media to install as well as some general cleanup.

  19 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> rune-1.07-r2.ebuild:
  Adding strip to RESTRICT for bug #137819.

  15 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> -rune-1.07-r1.ebuild,
  rune-1.07-r2.ebuild:
  Stable on amd64/x86 since there have been no bug reports in quite some time.
  Removing older revisions. Removing virtual/x11 from dependencies.

  24 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> rune-1.07-r2.ebuild:
  Changed libsdl dependency and closing bug #117918.

*rune-1.07-r2 (24 May 2006)

  24 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> +rune-1.07-r2.ebuild:
  Added a new revision to use xdelta to save users from having to download as