@@ -1,24 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST rune-all-0.2.tar.bz2 6507237 RMD160 71618cc4563199ee1cd30181b289d81347d597b7 SHA1 2033194626c53e11eb6b28335641e8dee313ad93 SHA256 432a21d03e3728000c484eec9a5f2a27837c58265d89bf3674716354dbed1632
-EBUILD rune-1.07-r2.ebuild 4441 RMD160 5655ca4920c333d30fc8fecb8bd32c0494186b32 SHA1 fd33252b8d2febe73626d00fa6406c92e7fbb8b8 SHA256 041d97db198f90d0f511e854132d958687fef48fc1c8010b54ad7c981e23c63c
-MISC ChangeLog 3599 RMD160 2032473b1fe4ffa2adef96d6c3f5b46690d8581a SHA1 f783c31b573d1badee496b60d92c139a332d7b19 SHA256 b65e26279354051e29ba546afe543efb6cca5be33d928554f16ed103d7c92b7d
-MISC metadata.xml 2027 RMD160 a914d43ffa38c184517fec73ded779726996316a SHA1 4413d3c4560facd80839697d0101cfa8bf6ee119 SHA256 73f8e1917e8b3e9812e9ef971a432eec472ac15e246929df9b7821a2158b4390
+DIST rune-all-0.2.tar.bz2 6507237 SHA256 432a21d03e3728000c484eec9a5f2a27837c58265d89bf3674716354dbed1632 SHA512 5c86306c84a6b606e13c3b1eebf676479cfe8d1112a2c5b31d6332fc7305fea74485d9a4b89286db38b968f473a40d7b5e500c17aaa8b2010edb17cc95b1695b WHIRLPOOL 75a357df7c4c231e060973fb3816782b0dcbceedc6dc18f2e35ae115e79dcd9fe74eec04e74fdf1772c695161cb63d39d27e146a554ca7473e8f88755c1d6919
+EBUILD rune-1.07-r2.ebuild 4403 SHA256 7c0574c08524244ca9f2854edbb993ca3bcb86787b11ab460f0cad4d9e0ec09f SHA512 c31d9738b26d47a16213f3091ffa406aa32abc653fe4e80291a3d5054fa644e92b6616ea1ce62090642f9506b02070c16d45ad2c4dc70b7d77934e937a44229e WHIRLPOOL 49b6ee49ba5d249ac334b05e42a07bccb0ff099af492bebe2750d35cf8ee863bd5a8018061ab774ea554db42d71736e12a69beca63ac57d65db0234d752b9b87
+MISC ChangeLog 3742 SHA256 4dd48efc67f8c775bd3a8ccd6f7686ee27921b9dc1a381a9647d0bc753d28750 SHA512 a4e94351068833863bea2069476a6581cf917ba78d903b26d05884a5ca1dc93af1903cfa7f84c48045bc40efacbce29f443e544d797f568475eaa834d99a0ec9 WHIRLPOOL 79ab65d9a7e9ae9ad2521728addf2933d9461956276ec9d9780aa36c1e4db3449ac62db89009a88e528468272fdc5e5f01e9b7b90504f1f4887e5fd09bf900d5
+MISC metadata.xml 2027 SHA256 73f8e1917e8b3e9812e9ef971a432eec472ac15e246929df9b7821a2158b4390 SHA512 1ed781634cd323c4c398f9788df16db5ce5e073b34f6f8a58dde86557d7e1e42c7876efb4304d57e154f44682ebcf4952e3614a958a15dbd7758d8805d38ba10 WHIRLPOOL c9f6a8fc400654f56211967acb9a7ac249fc04a4359baf82198530918f4895195267d74d0dfd444e62f69d0939decc70e9cb6a24abca793b0b7653391bad29b9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBAgAGBQJPFHY2AAoJEDxpGckxwJCBYEEP/3D1TAnrhWrZGmEIJx/6aNmB
-BDMuJEle/x6uCtFobiCtBhcspir/QhaTQuUBTlYXIxcMxCTI0obKnl7hVCs8RJ8X
-SwtQfEDBMRh4H1Dh+293427IlLrp75gofDypHCNHXeRrBr3q4LMsEXuFDhQX5qnz
-IQvst1qdOVQ22JtZGLQTaT7nBNE6dBNPVySrakOjIwlqwummFSjgGrXLqQjZBel8
-NhfhZo/idSgmBA1SSbfaHzWtchAZYy+a+liYh+dYCsBhCLnEkYZgkSCaZSxkTP0D
-qTi7K6GoeVc6fvoDeURhM/eePV1x9zqOoDom7NBFfWcWHikvt5RyW4UNjQM92Acs
-sqdpEo6h17WE0pWoS1U2fdqvJHUtq9VRXxBAQfq/jwJTTlmk3oc8oJ7xIzuOJw9g
-26HeJ2QOgvPvg/7/pcmMSN+qSOtLStjTUZqon/fWUYc2oaRXdSxSOu4QJSOMxuEL
-uqZ+PJ56H3JTtVMADSwLihDU11OYX6Gov3aCn8ouZjzJZ/3tyZVaXm05XeMw8In/
-FkrTn1lA7izuw6+DGXxPe2N41Ixti+2sjTlBWiC4QhFE9D8h0Ph+iLj4pY6TnTPJ
-wvFmhToxa3qlH+PgWKKKNO2QZyTIeDKe/geq9wHSeLHTjijDEIeW+IWyqbiAUElw
-4EdqLk/6eRjq7CEDTIgC
-=4Kw5
+iQGcBAEBCAAGBQJUDCIbAAoJEJQzkH1pP7W4dmEL/2JJufIuZ45ximwipdFQ01MP
+azNa393df+uDudlUDhLD+yHWzipU1aZH73V4Cb++QiaE0ULi6NWpWh4GJNd9diQf
+/XGUqoChbd7RGMb05WJw3rOQYT2pIWgoNpBlWH4Ry0HXPt7piLhM5hlj1Fia8oh9
+l5VUWjk+Bap6s5J9HNPc6enbPDrKglZ9nkebwJpiMdQqoQsLID1WHGj2CAm89fPl
+wYEnfTgz9cWLwII4QtObpj9ADbWgkSp6nNlBm7NgsSK8VXAOXbegHDVXI8b5CiZM
+vNLEi24TWRs/bl5EUqOgNbWNQNA4sWDVidQCQYVNSf8+KiMDYrGc+QDbMZAtaPi/
+k/iB2ESNw5zqMoUaAXPlzhtgxNArFnTveeWMQKVctUlhaXF7DxLoaO53z2nL6+w9
+3iFTGQR1t4toGLt6/VEdY4gxSf12Y25URHzxQ7zFxoIXzHhFcr/iXpr6Mlwco4iu
+Pkxf3kVmuqgHGGPYNmC8JLSpqSUwLBZf9Jil5Z1Q6Q==
+=VoMP
 -----END PGP SIGNATURE-----
