@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/rune/rune-1.07-r2.ebuild,v 1.11 2012/01/16 19:10:25 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/rune/rune-1.07-r2.ebuild,v 1.12 2014/09/07 09:14:12 ulm Exp $
 
 EAPI=2
 inherit eutils cdrom games
@@ -12,8 +12,8 @@ SRC_URI="mirror://gentoo/rune-all-0.2.tar.bz2"
 LICENSE="LOKI-EULA"
 SLOT="0"
 KEYWORDS="amd64 x86"
-RESTRICT="strip"
 IUSE=""
+RESTRICT="strip"
 
 RDEPEND="virtual/opengl
 		dev-util/xdelta:0
@@ -23,7 +23,6 @@ RDEPEND="virtual/opengl
 		>=media-libs/libsdl-1.2.9-r1 )
 	amd64? (
 		app-emulation/emul-linux-x86-xlibs
-		app-emulation/emul-linux-x86-compat
 		app-emulation/emul-linux-x86-sdl )"
 
 DEPEND=""
